<resources>
    <string name="app_name">ProPodcast</string>

    <!-- Screen Titles -->
    <string name="best_podcast_title">Best</string>
    <string name="podcast_details_title">Details</string>
    <string name="favorite_items_title">Favorite</string>
    <string name="favorite_podcats_title">Podcasts</string>
    <string name="favorite_episodes_title">Episodes</string>
    <string name="search_podcasts_title">Search</string>
    <string name="filters_title">Filters</string>
    <string name="filters_genre_title">Genre</string>
    <string name="filters_region_title">Region</string>
    <string name="filters_language_title">Language</string>


    <string name="genres_all_title">All genres</string>
    <string name="adapter_empty_string">N/D</string>

    <!--popup menu actions -->
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="share_label">Share</string>

    <!-- podcast details-->
    <string name="last_published_date_label">Last published: </string>
    <string name="published_date_label">Published: </string>
    <string name="episodes_label">episodes</string>
    <string name="more_label">More episodes ></string>
    <string name="recommendation_podcasts_label"><u>Recommendations:</u></string>
    <string name="publisher_label">Publisher: </string>
    <string name="country_label">Country: </string>
    <string name="episodes_count_label">EP total count: </string>

    <!-- Empty list errors-->
    <string name="empty_favorites_episodes_list">Empty favorites episodes list!</string>
    <string name="empty_favorites_podcasts_list">Empty favorites podcasts list!</string>
    <string name="empty_search_message">Empty search list!</string>
    <string name="empty_best_podcasts_message">Empty best poscasts list!</string>

    <string name="retry_btn">Connection Error! Retry</string>

    <!--Player -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="error_video_url">Sorry, video URL is Empty</string>
    <string name="error_connection">Connection error!</string>
    <string name="error_continue_last_track">You have no running tracks yet</string>
    <string name="player_notification_channel_id">ProPodcastPlayerChannel</string>
    <string name="player_notification_channel_name">ProPodcast Player Channel</string>
    <string name="player_service_running">Running..</string>
    <string name="player_service_wake_lock_tag">ProPodcastApp:Wakelock</string>

    <!-- FCM-->
    <string name="fcm_notification_channel_id">ProPodcastFcmChannel</string>
    <string name="fcm_notification_channel_name">ProPodcast FCM Channel</string>
    <!-- Icons descriptions-->
    <string name="content_description_play">Play button</string>
    <string name="content_description_podcast_logo">Podcast Logo</string>
    <string name="content_description_episode_logo">Episode Logo</string>
    <string name="content_description_favorite">Favorite button</string>
    <string name="content_description_search_filter">Language search filter button</string>
    <string name="content_description_item_more_options">More options</string>
    <string name="content_description_item_selected">Selected item</string>
    <string name="content_description_widget_top_image">Top image</string>
    <string name="content_description_pause">Pause button</string>
    <string name="content_description_restore">Restore button</string>
    <string name="content_description_close">Close button</string>
    <string name="content_description_stop">Stop button</string>

    <string name="api_wrong_api_key">Your Listen API KEY is wrong!</string>
    <string name="api_quota_limit">Free plan quota limit</string>
    <string name="api_item_id_error">Item ID is wrong!</string>
    <string name="api_something_wrong">Something wrong on Listen API server!</string>

</resources>
