<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/bestPodcastsFragment">

    <fragment
        android:id="@+id/bestPodcastsFragment"
        android:name="com.pavelprymak.propodcast.presentation.screens.BestPodcastsFragment"
        android:label="@string/best_podcast_title"
        tools:layout="@layout/fragment_best_podcasts" >
        <action
            android:id="@+id/action_bestPodcastsFragment_to_podcastDetailsFragment"
            app:destination="@id/podcastDetailsFragment" />
        <action
            android:id="@+id/action_bestPodcastsFragment_to_filtersViewPagerFragment"
            app:destination="@id/filtersViewPagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesPodcastsFragment"
        android:name="com.pavelprymak.propodcast.presentation.screens.FavoritesPodcastsFragment"
        android:label="@string/favorite_podcasts_title"
        tools:layout="@layout/fragment_favorites_podcasts" >
        <action
            android:id="@+id/action_favoritesPodcastsFragment_to_podcastDetailsFragment"
            app:destination="@id/podcastDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.pavelprymak.propodcast.presentation.screens.SearchFragment"
        android:label="@string/search_podcasts_title"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_podcastDetailsFragment"
            app:destination="@id/podcastDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/podcastDetailsFragment"
        android:name="com.pavelprymak.propodcast.presentation.screens.PodcastDetailsFragment"
        android:label="@string/podcast_details_title"
        tools:layout="@layout/fragment_podcast_details" />
    <fragment
        android:id="@+id/filtersViewPagerFragment"
        android:name="com.pavelprymak.propodcast.presentation.screens.filters.FiltersViewPagerFragment"
        android:label="@string/filters_title"
        tools:layout="@layout/fragment_filters_view_pager" />
</navigation>