<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/best_podcast_title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBestPodcasts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layout_marginBottom="@dimen/list_padding_bottom"
            android:scrollbarStyle="outsideOverlay"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_best_podcasts_message"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/standard_text_size"
            android:visibility="gone"/>

    <Button
            android:id="@+id/retryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="@dimen/list_padding_bottom"
            android:background="@color/colorBackgroundTransparent"
            android:text="@string/retry_btn"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:visibility="visible"/>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
